# devmon

./: .gitignore  CLAUDE.md  CONTRIBUTING.md  LICENSE  README.md  convert_art.py  preview_art.py  pyproject.toml  view_creatures.py
.planning/: PROJECT.md  REQUIREMENTS.md  ROADMAP.md  STATE.md  config.json
.planning/phases/01-foundation/: 01-01-PLAN.md  01-01-SUMMARY.md  01-02-PLAN.md  01-02-SUMMARY.md  01-03-PLAN.md  01-03-SUMMARY.md  01-04-PLAN.md  01-04-SUMMARY.md  01-05-PLAN.md  01-05-SUMMARY.md  01-CONTEXT.md  (+4 more)
.planning/research/: ARCHITECTURE.md  FEATURES.md  PITFALLS.md  STACK.md  SUMMARY.md
art/: CREDITS.md
docs/: ROADMAP-DEPTH.md  STORY.md
scripts/: preview_png.py  show_creatures.py  uat_smoke.py
src/devmon/: __init__.py  __main__.py  main.py
tests/: conftest.py  test_ability_energy.py  test_achievements.py  test_animation.py  test_auras.py  test_auto_battle.py  test_badges.py  test_battle.py  test_battle_art_views.py  test_biomes.py  test_candy.py  test_capture_tiers.py  test_charms.py  test_collection.py  test_crafting.py  test_creatures.py  test_dungeon_cli.py  test_dungeon_items.py  test_dungeon_loader.py  test_dungeon_loot.py  test_dungeons.py  test_economy.py  test_encounter_models.py  test_encounters.py  test_event_log_profile_scoping.py  test_event_reader.py  test_events.py  test_evolution.py  test_free_heal.py  test_heal.py  test_image.py  test_indicator.py  test_integrity.py  test_item_icons.py  test_legendary_quests.py  test_loot.py  test_main_startup.py  test_marketplace.py  test_medibot.py  test_models.py  (+29 more)
tests/app/: test_app.py
(+431 files in other folders)
