[project]
name = "devmon"
version = "0.1.0"
description = "Gamified terminal creature-collection RPG powered by coding activity"
requires-python = ">=3.12"
dependencies = [
    "typer>=0.24.1",
    "rich>=14.3.0",
    "pydantic>=2.12.0",
    "blinker>=1.9.0",
    "platformdirs>=4.9.0",
    "tomli-w>=1.1.0",
    "Pillow>=12.0.0",
    "textual>=8.2.8",
]

[project.scripts]
devmon = "devmon.main:app"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/devmon"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-ra -q"
asyncio_mode = "auto"

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "UP"]

[tool.mypy]
python_version = "3.12"
strict = true
plugins = ["pydantic.mypy"]

[dependency-groups]
dev = [
    "pytest>=8.0",
    "pytest-cov>=5.0",
    "pytest-asyncio>=0.24.0",
    "ruff>=0.9.0",
    "mypy>=1.14.0",
]
